--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "babel-eslint": "^10.1.0",
+    "firebase": "^9.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -53,7 +53,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "7.11.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^6.0.0",
