--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.4",
-    "@mui/material": "^5.0.4",
-    "@mui/styled-engine-sc": "^5.0.3",
+    "@mui/material": "^5.1.0",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@mui/styles": "^5.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^9.4.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -54,7 +56,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.2.0",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^6.0.0",
