--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.25.0",
+    "clsx": "^1.1.1",
     "firebase": "^9.4.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
