--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.4.1",
     "lodash": "^4.17.21",
+    "nanoid": "^3.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -32,7 +33,6 @@
     "redux-thunk": "^2.4.1",
     "standard": "^16.0.4",
     "styled-components": "^5.3.3",
-    "uniqid": "^5.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
